# Nitro

./: .gitignore  CONTEXT.md  Cargo.toml  README.md  install.sh
core/: Cargo.toml
core/src/: lib.rs
daemon/: Cargo.toml
daemon/src/: actuator.rs  config.rs  main.rs
gui/: Cargo.toml
gui/src/: main.rs
