[workspace]
resolver = "2"
members = [
    "core",
    "daemon",
    "gui"
]

[workspace.dependencies]
# Shared Async Runtime
tokio = { version = "1.36", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error Handling
anyhow = "1.0"
# Internal Logic
nitro-core = { path = "./core" }