[package]
name = "nitro-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
nitro-core = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
sys-info = "0.9"
ctrlc = "3.4"
regex = "1.10"
serde_json = { workspace = true }
log = "0.4"
env_logger = "0.11"
config = "0.14"
serde = { workspace = true }
